--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ section {
     color: whitesmoke;
     animation: typing 2s steps(50), step-end infinite alternate;
     white-space: nowrap;
-    width: 21ch;
+    width: 22ch;
     overflow: hidden;
     margin: auto;
     padding-top: 1rem;
@@ -315,7 +315,8 @@ footer {
       padding-bottom: 1rem; }
   main .contenedor-img-partners {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr); }
+    grid-template-rows: repeat(2, 1fr);
+    padding-bottom: 0; }
   main .iframe-contacto {
     padding-left: 5rem;
     padding-right: 5rem; }
